[gd_scene load_steps=11 format=3 uid="uid://jh5qvi3kwoxs"]

[ext_resource type="PackedScene" uid="uid://b0ky4ulvfwhdr" path="res://prefabs/actors/Crab/mr_krabs_spongebob/scene.gltf" id="1_cby2l"]
[ext_resource type="Script" path="res://scripts/actors/MrKrabs.gd" id="1_sv7mq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_00da5"]
radius = 0.877411
height = 3.51923

[sub_resource type="Animation" id="Animation_2iahm"]
resource_name = "Take 001"
length = 0.666667
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Cylinder002")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.0333333, 1, -0.00122224, 0, 0, 0.999999, 0.0666667, 1, -0.00453905, 0, 0, 0.99999, 0.1, 1, -0.00942603, 0, 0, 0.999956, 0.133333, 1, -0.0153592, 0, 0, 0.999882, 0.2, 1, -0.0282697, 0, 0, 0.9996, 0.233333, 1, -0.0342004, 0, 0, 0.999415, 0.266667, 1, -0.0390842, 0, 0, 0.999236, 0.3, 1, -0.0423983, 0, 0, 0.999101, 0.366667, 1, -0.0423983, 0, 0, 0.999101, 0.4, 1, -0.0390842, 0, 0, 0.999236, 0.433333, 1, -0.0342004, 0, 0, 0.999415, 0.466667, 1, -0.0282697, 0, 0, 0.9996, 0.533333, 1, -0.0153592, 0, 0, 0.999882, 0.566667, 1, -0.00942602, 0, 0, 0.999956, 0.6, 1, -0.00453904, 0, 0, 0.99999, 0.633333, 1, -0.00226953, 0, 0, 0.999997, 0.666667, 1, 0, 0, 0, 1)
tracks/1/type = "position_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_leg")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -63.2757, 7.50213e-06, -63.3605, 0.0333333, 1, -63.2757, 0.301634, -63.3074, 0.0666667, 1, -63.2757, 1.12017, -63.163, 0.1, 1, -63.2757, 2.32621, -62.9504, 0.133333, 1, -63.2757, 3.79053, -62.6922, 0.2, 1, -63.2757, 6.97738, -62.1302, 0.233333, 1, -63.2757, 8.44169, -61.872, 0.266667, 1, -63.2757, 9.64774, -61.6594, 0.3, 1, -63.2757, 10.4663, -61.515, 0.366667, 1, -63.2757, 10.4663, -61.515, 0.4, 1, -63.2757, 9.64774, -61.6594, 0.433333, 1, -63.2757, 8.44169, -61.872, 0.466667, 1, -63.2757, 6.97738, -62.1302, 0.533333, 1, -63.2757, 3.79053, -62.6922, 0.566667, 1, -63.2757, 2.32621, -62.9504, 0.6, 1, -63.2757, 1.12016, -63.163, 0.666667, 1, -63.2757, 7.50213e-06, -63.3605)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_leg")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0, 0.707107, 0.707107, 0.0333333, 1, 0.00172851, -0.00172851, 0.707105, 0.707105, 0.0666667, 1, 0.00641912, -0.00641912, 0.707078, 0.707078, 0.1, 1, 0.0133298, -0.0133298, 0.706981, 0.706981, 0.133333, 1, 0.0217186, -0.0217186, 0.706773, 0.706773, 0.2, 1, 0.0399634, -0.0399634, 0.705977, 0.705977, 0.233333, 1, 0.0483384, -0.0483384, 0.705453, 0.705453, 0.266667, 1, 0.0552312, -0.0552312, 0.704946, 0.704946, 0.3, 1, 0.0599063, -0.0599063, 0.704565, 0.704565, 0.366667, 1, 0.0599063, -0.0599063, 0.704565, 0.704565, 0.4, 1, 0.0552312, -0.0552312, 0.704946, 0.704946, 0.433333, 1, 0.0483384, -0.0483384, 0.705453, 0.705453, 0.466667, 1, 0.0399634, -0.0399634, 0.705977, 0.705977, 0.533333, 1, 0.0217186, -0.0217186, 0.706773, 0.706773, 0.566667, 1, 0.0133298, -0.0133298, 0.706981, 0.706981, 0.6, 1, 0.00641911, -0.00641911, 0.707078, 0.707078, 0.666667, 1, 0, 0, 0.707107, 0.707107)
tracks/3/type = "position_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_leg")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 61.8582, 9.1963e-06, -102.119, 0.0333333, 1, 61.8582, 0.487298, -102.033, 0.0666667, 1, 61.8582, 1.80966, -101.8, 0.1, 1, 61.8582, 3.75808, -101.456, 0.133333, 1, 61.8582, 6.12373, -101.039, 0.2, 1, 61.8582, 11.2722, -100.131, 0.233333, 1, 61.8582, 13.6378, -99.714, 0.266667, 1, 61.8582, 15.5863, -99.3704, 0.3, 1, 61.8582, 16.9086, -99.1372, 0.366667, 1, 61.8582, 16.9086, -99.1372, 0.4, 1, 61.8582, 15.5863, -99.3704, 0.433333, 1, 61.8582, 13.6378, -99.714, 0.466667, 1, 61.8582, 11.2722, -100.131, 0.533333, 1, 61.8582, 6.12373, -101.039, 0.566667, 1, 61.8582, 3.75808, -101.456, 0.6, 1, 61.8582, 1.80966, -101.8, 0.666667, 1, 61.8582, 9.1963e-06, -102.119)
tracks/4/type = "rotation_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_leg")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, -0.0616284, -0.0616284, 0.704416, 0.704416, 0.0333333, 1, -0.0599063, -0.0633502, 0.704263, 0.704564, 0.0666667, 1, -0.0552312, -0.0680206, 0.703828, 0.704946, 0.1, 1, -0.0483383, -0.0748966, 0.703129, 0.705453, 0.133333, 1, -0.0399633, -0.0832353, 0.702191, 0.705976, 0.2, 1, -0.0217186, -0.101341, 0.699807, 0.706773, 0.233333, 1, -0.0133298, -0.109639, 0.698555, 0.706981, 0.266667, 1, -0.00641909, -0.116461, 0.69745, 0.707078, 0.3, 1, -0.00172847, -0.121085, 0.696662, 0.707105, 0.366667, 1, -0.00172847, -0.121085, 0.696662, 0.707105, 0.4, 1, -0.00641909, -0.116461, 0.69745, 0.707078, 0.433333, 1, -0.0133298, -0.109639, 0.698555, 0.706981, 0.466667, 1, -0.0217186, -0.101341, 0.699807, 0.706773, 0.533333, 1, -0.0399633, -0.0832353, 0.702191, 0.705976, 0.566667, 1, -0.0483384, -0.0748966, 0.703129, 0.705453, 0.6, 1, -0.0552312, -0.0680206, 0.703828, 0.704946, 0.666667, 1, -0.0616284, -0.0616284, 0.704416, 0.704416)
tracks/5/type = "rotation_3d"
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_shoulder/Right_arm/Right_hand/Right_claw")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 2.27684e-08, -0.537299, 0.843392, -1.43379e-07, 0.0333333, 1, 2.79587e-08, -0.567564, 0.823329, -1.42458e-07, 0.0666667, 1, 4.01706e-08, -0.636622, 0.771176, -1.39507e-07, 0.1, 1, -5.43432e-08, 0.712756, -0.701412, 1.34621e-07, 0.133333, 1, -6.57787e-08, 0.770729, -0.637163, 1.29418e-07, 0.166667, 1, -7.04338e-08, 0.793353, -0.608762, 1.26945e-07, 0.2, 1, -6.85644e-08, 0.78434, -0.620332, 1.27964e-07, 0.233333, 1, -6.34182e-08, 0.759034, -0.65105, 1.30591e-07, 0.266667, 1, -5.56551e-08, 0.71957, -0.694419, 1.34084e-07, 0.3, 1, 4.59748e-08, -0.668344, 0.743853, -1.37703e-07, 0.366667, 1, 2.41702e-08, -0.545526, 0.838094, -1.43149e-07, 0.4, 1, 1.39249e-08, -0.484519, 0.874781, -1.44506e-07, 0.433333, 1, 5.43119e-09, -0.432413, 0.901675, -1.45074e-07, 0.466667, 1, -3.45815e-10, -0.396192, 0.918168, -1.45175e-07, 0.5, 1, -2.47496e-09, -0.382683, 0.92388, -1.45154e-07, 0.533333, 1, 1.6078e-10, -0.399394, 0.91678, -1.45175e-07, 0.566667, 1, 6.44226e-09, -0.438688, 0.89864, -1.45032e-07, 0.6, 1, 1.39219e-08, -0.484501, 0.874791, -1.44506e-07, 0.666667, 1, 2.27684e-08, -0.537299, 0.843392, -1.43379e-07)
tracks/6/type = "rotation_3d"
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_shoulder/Right_arm/Right_hand")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 0.173648, -5.74554e-25, -3.25846e-24, 0.984808, 0.0333333, 1, 0.170036, 3.31e-20, -4.45801e-19, 0.985438, 0.0666667, 1, 0.160222, -1.2619e-18, -5.06745e-18, 0.987081, 0.1, 1, 0.145734, -1.7162e-18, 2.52807e-19, 0.989324, 0.133333, 1, 0.128101, -3.44086e-18, 4.44438e-19, 0.991761, 0.2, 1, 0.0895923, -6.91099e-18, 6.21672e-19, 0.995979, 0.233333, 1, 0.0718497, 4.98558e-19, 6.92096e-18, 0.997415, 0.266667, 1, 0.0572191, -7.94075e-19, -1.38551e-17, 0.998362, 0.3, 1, 0.0472823, 2.07934e-17, -9.8426e-19, 0.998882, 0.366667, 1, 0.0472823, 2.07934e-17, -9.8426e-19, 0.998882, 0.4, 1, 0.0572191, -1.3061e-17, 1.46491e-17, 0.998362, 0.433333, 1, 0.0718497, -6.4224e-18, 7.41952e-18, 0.997415, 0.466667, 1, 0.0895923, -4.69884e-18, -1.35111e-17, 0.995979, 0.533333, 1, 0.128101, -6.43729e-18, 4.32974e-18, 0.991761, 0.566667, 1, 0.145734, 7.04974e-19, -7.11762e-18, 0.989324, 0.6, 1, 0.160222, 2.77941e-19, 1.71231e-18, 0.987081, 0.666667, 1, 0.173648, -5.74554e-25, -3.25846e-24, 0.984808)
tracks/7/type = "rotation_3d"
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_shoulder")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 0.353553, -0.353553, -0.612372, 0.612372, 0.0333333, 1, 0.350555, -0.350555, -0.614094, 0.614094, 0.0666667, 1, 0.342377, -0.342377, -0.61869, 0.61869, 0.1, 1, 0.330218, -0.330218, -0.625265, 0.625265, 0.133333, 1, 0.315286, -0.315286, -0.632925, 0.632925, 0.2, 1, 0.282187, -0.282187, -0.64836, 0.64836, 0.233333, 1, 0.26672, -0.26672, -0.654874, 0.654874, 0.266667, 1, 0.253868, -0.253868, -0.659963, 0.659963, 0.3, 1, 0.24509, -0.24509, -0.663273, 0.663273, 0.366667, 1, 0.24509, -0.24509, -0.663273, 0.663273, 0.4, 1, 0.253868, -0.253868, -0.659963, 0.659963, 0.433333, 1, 0.26672, -0.26672, -0.654874, 0.654874, 0.466667, 1, 0.282187, -0.282187, -0.64836, 0.64836, 0.533333, 1, 0.315286, -0.315286, -0.632925, 0.632925, 0.566667, 1, 0.330218, -0.330218, -0.625265, 0.625265, 0.6, 1, 0.342377, -0.342377, -0.61869, 0.61869, 0.666667, 1, 0.353553, -0.353553, -0.612372, 0.612372)
tracks/8/type = "rotation_3d"
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_shoulder/Left_arm/Left_hand/Left_claw")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, 2.27684e-08, -0.537299, 0.843392, -1.43379e-07, 0.0333333, 1, 2.79587e-08, -0.567564, 0.823329, -1.42458e-07, 0.0666667, 1, 4.01706e-08, -0.636622, 0.771176, -1.39507e-07, 0.1, 1, -5.43432e-08, 0.712756, -0.701412, 1.34621e-07, 0.133333, 1, -6.57787e-08, 0.770729, -0.637163, 1.29418e-07, 0.166667, 1, -7.04338e-08, 0.793353, -0.608762, 1.26945e-07, 0.2, 1, -6.85644e-08, 0.78434, -0.620332, 1.27964e-07, 0.233333, 1, -6.34182e-08, 0.759034, -0.65105, 1.30591e-07, 0.266667, 1, -5.56551e-08, 0.71957, -0.694419, 1.34084e-07, 0.3, 1, 4.59748e-08, -0.668344, 0.743853, -1.37703e-07, 0.366667, 1, 2.41702e-08, -0.545526, 0.838094, -1.43149e-07, 0.4, 1, 1.39249e-08, -0.484519, 0.874781, -1.44506e-07, 0.433333, 1, 5.43119e-09, -0.432413, 0.901675, -1.45074e-07, 0.466667, 1, -3.45815e-10, -0.396192, 0.918168, -1.45175e-07, 0.5, 1, -2.47496e-09, -0.382683, 0.92388, -1.45154e-07, 0.533333, 1, 1.6078e-10, -0.399394, 0.91678, -1.45175e-07, 0.566667, 1, 6.44226e-09, -0.438688, 0.89864, -1.45032e-07, 0.6, 1, 1.39219e-08, -0.484501, 0.874791, -1.44506e-07, 0.666667, 1, 2.27684e-08, -0.537299, 0.843392, -1.43379e-07)
tracks/9/type = "rotation_3d"
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_shoulder/Left_arm/Left_hand")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, 0.173648, 0, 0, 0.984808, 0.0333333, 1, 0.170036, 1.14383e-19, 1.30053e-18, 0.985438, 0.0666667, 1, 0.160222, 2.77941e-19, 1.71231e-18, 0.987081, 0.1, 1, 0.145734, -2.22182e-18, -3.1796e-18, 0.989324, 0.133333, 1, 0.128101, 1.72043e-18, -2.22219e-19, 0.991761, 0.2, 1, 0.0895923, 0, 0, 0.995979, 0.233333, 1, 0.0718497, 5.92384e-18, -1.43405e-17, 0.997415, 0.266667, 1, 0.0572191, 1.3458e-17, -7.7216e-18, 0.998362, 0.3, 1, 0.0472823, -6.27496e-18, 1.41904e-17, 0.998882, 0.366667, 1, 0.0472823, -6.27496e-18, 1.41904e-17, 0.998882, 0.4, 1, 0.0572191, -6.92753e-18, 3.97037e-19, 0.998362, 0.433333, 1, 0.0718497, 6.4224e-18, -7.41952e-18, 0.997415, 0.466667, 1, 0.0895923, 4.69884e-18, 1.35111e-17, 0.995979, 0.533333, 1, 0.128101, 2.60931e-18, 6.65951e-18, 0.991761, 0.566667, 1, 0.145734, 2.06869e-18, -3.81162e-18, 0.989324, 0.6, 1, 0.160222, 7.06019e-19, 1.64283e-18, 0.987081, 0.666667, 1, 0.173648, 0, 0, 0.984808)
tracks/10/type = "rotation_3d"
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_shoulder")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 0.353553, 0.353553, 0.612372, 0.612373, 0.0333333, 1, 0.350555, 0.350555, 0.614094, 0.614094, 0.0666667, 1, 0.342377, 0.342377, 0.61869, 0.61869, 0.1, 1, 0.330218, 0.330218, 0.625265, 0.625265, 0.133333, 1, 0.315286, 0.315286, 0.632925, 0.632925, 0.2, 1, 0.282187, 0.282187, 0.64836, 0.64836, 0.233333, 1, 0.26672, 0.26672, 0.654874, 0.654874, 0.266667, 1, 0.253868, 0.253868, 0.659963, 0.659963, 0.3, 1, 0.24509, 0.24509, 0.663273, 0.663273, 0.366667, 1, 0.24509, 0.24509, 0.663273, 0.663273, 0.4, 1, 0.253868, 0.253868, 0.659963, 0.659963, 0.433333, 1, 0.26672, 0.26672, 0.654874, 0.654874, 0.466667, 1, 0.282187, 0.282187, 0.64836, 0.64836, 0.533333, 1, 0.315286, 0.315286, 0.632925, 0.632925, 0.566667, 1, 0.330218, 0.330218, 0.625265, 0.625265, 0.6, 1, 0.342377, 0.342377, 0.61869, 0.61869, 0.666667, 1, 0.353553, 0.353553, 0.612372, 0.612373)
tracks/11/type = "rotation_3d"
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Object002")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.0333333, 1, -0.00122224, 0, 0, 0.999999, 0.0666667, 1, -0.00453905, 0, 0, 0.99999, 0.1, 1, -0.00942603, 0, 0, 0.999956, 0.133333, 1, -0.0153592, 0, 0, 0.999882, 0.2, 1, -0.0282697, 0, 0, 0.9996, 0.233333, 1, -0.0342004, 0, 0, 0.999415, 0.266667, 1, -0.0390842, 0, 0, 0.999236, 0.3, 1, -0.0423983, 0, 0, 0.999101, 0.366667, 1, -0.0423983, 0, 0, 0.999101, 0.4, 1, -0.0390842, 0, 0, 0.999236, 0.433333, 1, -0.0342004, 0, 0, 0.999415, 0.466667, 1, -0.0282697, 0, 0, 0.9996, 0.533333, 1, -0.0153592, 0, 0, 0.999882, 0.566667, 1, -0.00942602, 0, 0, 0.999956, 0.6, 1, -0.00453904, 0, 0, 0.99999, 0.633333, 1, -0.00226953, 0, 0, 0.999997, 0.666667, 1, 0, 0, 0, 1)
tracks/12/type = "rotation_3d"
tracks/12/imported = true
tracks/12/enabled = true
tracks/12/path = NodePath("Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = PackedFloat32Array(0, 1, -0.707107, 0, 0, 0.707107, 0.0333333, 1, -0.708833, 0, 0, 0.705376, 0.0666667, 1, -0.713497, 0, 0, 0.700659, 0.1, 1, -0.720311, 0, 0, 0.693651, 0.133333, 1, -0.728492, 0, 0, 0.685055, 0.2, 1, -0.74594, 0, 0, 0.666013, 0.233333, 1, -0.753791, 0, 0, 0.657114, 0.266667, 1, -0.760178, 0, 0, 0.649715, 0.3, 1, -0.764471, 0, 0, 0.644658, 0.366667, 1, -0.764471, 0, 0, 0.644658, 0.4, 1, -0.760178, 0, 0, 0.649715, 0.433333, 1, -0.753791, 0, 0, 0.657114, 0.466667, 1, -0.74594, 0, 0, 0.666013, 0.533333, 1, -0.728492, 0, 0, 0.685055, 0.566667, 1, -0.720311, 0, 0, 0.693651, 0.6, 1, -0.713497, 0, 0, 0.700659, 0.666667, 1, -0.707107, 0, 0, 0.707107)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yqwvs"]
_data = {
"Take 001": SubResource("Animation_2iahm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rn3i8"]
animation = &"Take 001"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gbhci"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kl6io"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_piew5"]
states/Start/position = Vector2(192, 111)
"states/Take 001/node" = SubResource("AnimationNodeAnimation_rn3i8")
"states/Take 001/position" = Vector2(498, 100)
transitions = ["Start", "Take 001", SubResource("AnimationNodeStateMachineTransition_gbhci"), "Take 001", "End", SubResource("AnimationNodeStateMachineTransition_kl6io")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_451mb"]

[node name="MrKrabs" type="Node3D"]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0)

[node name="Krabs" type="Node3D" parent="."]

[node name="KrabsBody" type="CharacterBody3D" parent="Krabs"]
script = ExtResource("1_sv7mq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Krabs/KrabsBody"]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, 19.8675, 63.1104, 0)
shape = SubResource("CapsuleShape3D_00da5")

[node name="scene" parent="Krabs/KrabsBody" instance=ExtResource("1_cby2l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.22937, 0, -3.40908)

[node name="Body" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 24.8085, -47.2643, -7.62939e-06)

[node name="Right_leg" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body" index="9"]
transform = Transform3D(1.33782e-08, 0.306057, 0, -0.306057, 1.33782e-08, 0, 0, 0, -0.306057, -63.2757, 7.50213e-06, -63.3605)

[node name="Left_leg" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body" index="10"]
transform = Transform3D(8.78078e-08, 0.301407, 0.0531462, -0.306057, 8.63478e-08, 1.59621e-08, -7.25469e-10, 0.0531462, -0.301407, 61.8582, 9.1963e-06, -102.119)

[node name="Right_shoulder" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body" index="11"]
transform = Transform3D(-3.26074e-08, 0.130331, -0.22574, -0.260663, -1.13939e-08, 3.10733e-08, 5.66928e-09, 0.22574, 0.130331, -104.311, 8.97076e-07, 79.0831)

[node name="Right_hand" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_shoulder/Right_arm" index="1"]
transform = Transform3D(1, 6.21837e-24, -2.2633e-24, -6.61744e-24, 0.939693, -0.34202, 0, 0.34202, 0.939693, -1.38406, -44.0068, 109.541)

[node name="Right_claw" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Right_shoulder/Right_arm/Right_hand" index="1"]
transform = Transform3D(-0.52017, 1.00075e-07, 8.95683e-08, -1.38019e-07, -0.19666, -0.421739, -5.90722e-08, -0.421739, 0.19666, -1.19209e-07, 0, -2.84217e-14)

[node name="Left_shoulder" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body" index="12"]
transform = Transform3D(6.36606e-08, -0.130331, 0.22574, 0.260663, 1.96794e-08, -6.21467e-08, 1.40305e-08, 0.22574, 0.130331, 106.053, 1.38411, 79.0831)

[node name="Left_hand" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_shoulder/Left_arm" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, -1.38406, -44.0068, 109.541)

[node name="Left_claw" parent="Krabs/KrabsBody/scene/Sketchfab_model/Mr KrabsFBX/Object_2/RootNode/Body/Left_shoulder/Left_arm/Left_hand" index="1"]
transform = Transform3D(-0.52017, 1.00075e-07, 8.95683e-08, -1.38019e-07, -0.19666, -0.421739, -5.90722e-08, -0.421739, 0.19666, -6.05651e-08, 0, 0)

[node name="AnimationPlayer" parent="Krabs/KrabsBody/scene" index="1"]
libraries = {
"": SubResource("AnimationLibrary_yqwvs")
}

[node name="AnimationTree" type="AnimationTree" parent="Krabs/KrabsBody/scene"]
tree_root = SubResource("AnimationNodeStateMachine_piew5")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_451mb")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Krabs/KrabsBody"]
avoidance_enabled = true
max_neighbors = 50
max_speed = 1.5

[node name="RayCast3D" type="RayCast3D" parent="Krabs/KrabsBody"]

[node name="MoveTimer" type="Timer" parent="Krabs/KrabsBody"]
wait_time = 3.0
autostart = true

[connection signal="navigation_finished" from="Krabs/KrabsBody/NavigationAgent3D" to="Krabs/KrabsBody" method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="velocity_computed" from="Krabs/KrabsBody/NavigationAgent3D" to="Krabs/KrabsBody" method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="Krabs/KrabsBody/MoveTimer" to="Krabs/KrabsBody" method="_on_move_timer_timeout"]

[editable path="Krabs/KrabsBody/scene"]
